[package]
name = "wll"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A Wolfram LibraryLink interface."
readme = "README.md"
repository = "https://github.com/miRoox/wll-rs/"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["wolfram", "mathematica", "ffi", "wrapper"]

[workspace]
members = [
    "sys",
    "macros",
]

[features]
default = ["wll-macros"]
no-macros = []

[dependencies]
wll-sys = { version = "0.1", path = "sys" }
wll-macros = { version = "0.1", path = "macros", optional = true }
