[package]
name = "wll"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A Wolfram LibraryLink interface."
readme = "README.md"
repository = "https://github.com/miRoox/wll-rs/"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["wolfram", "mathematica", "librarylink", "ffi", "wrapper"]
exclude = [ "*.nb" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "sys",
    "macros",
    "examples/basic"
]

[features]
default = []
macros = ["wll-macros"]

[dependencies]
wll-sys = { version = "0.1", path = "sys" }
wll-macros = { version = "0.1", path = "macros", optional = true }
