[package]
name = "wll"
version = "0.1.1"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A Wolfram LibraryLink interface."
readme = "README.md"
repository = "https://github.com/miRoox/wll-rs/"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["wolfram", "mathematica", "librarylink", "ffi", "wrapper"]
exclude = [ "*.nb" ]

[package.metadata.docs.rs]
features = ["macros"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "sys",
    "macros",
    "examples/basic"
]

[features]
default = []
macros = ["wll-macros"]
num-complex-type = ["num-complex"]
auto-link = ["wll-sys/auto-link"]

[dependencies]
wll-sys = { version = "0.1", path = "sys" }
wll-macros = { version = "0.1", path = "macros", optional = true }
num-complex = { version = "0.3", optional = true}

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/run-tests.rs"
