[package]
name = "wll-macros"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"

[lib]
proc-macro=true

[[test]]
name = "tests"
path = "tests/run-tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
wll = { version = "0.1", path = ".." }
wll-sys = { version = "0.1", path = "../sys" }

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
