[package]
name = "wll-macros"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros for Wolfram LibraryLink interface."
repository = "https://github.com/miRoox/wll-rs/"
categories = ["development-tools::ffi"]
keywords = ["wolfram", "mathematica", "librarylink", "ffi", "macro"]

[lib]
proc-macro=true

[[test]]
name = "tests"
path = "tests/run-tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
wll = { version = "0.1", path = ".." }

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
