[package]
name = "wll-sys"
version = "0.1.0"
authors = ["miroox <miroox@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A low-level bindings for Wolfram LibraryLink."
categories = ["external-ffi-bindings", "development-tools::ffi"]
keywords = ["wolfram", "mathematica", "librarylink", "ffi", "bindings"]

[build-dependencies]
bindgen = "0.54"
